# teresa-pn-ou5

./: .gitignore  LICENSE  README.md  README.org  environment.yml  main.py  pyproject.toml
cloudy/: Makefile  ou5-T065-L130-n150.col  ou5-T065-L130-n150.cont  ou5-T065-L130-n150.dr  ou5-T065-L130-n150.ems  ou5-T065-L130-n150.het  ou5-T065-L130-n150.in  ou5-T065-L130-n150.out  ou5-T065-L130-n150.ovr  ou5-T100-L130-n150.col  ou5-T100-L130-n150.cont  ou5-T100-L130-n150.dr  ou5-T100-L130-n150.ems  ou5-T100-L130-n150.het  ou5-T100-L130-n150.in  ou5-T100-L130-n150.out  ou5-T100-L130-n150.ovr  ou5-T103-L400-Z3fluct-short.abun  ou5-T103-L400-Z3fluct-short.col  ou5-T103-L400-Z3fluct-short.cont  ou5-T103-L400-Z3fluct-short.dr  ou5-T103-L400-Z3fluct-short.ems  ou5-T103-L400-Z3fluct-short.het  ou5-T103-L400-Z3fluct-short.in  ou5-T103-L400-Z3fluct-short.out  ou5-T103-L400-Z3fluct-short.ovr  ou5-T103-L400-Z3fluct-short.rad  ou5-T103-L400-Z3fluct-short.res  ou5-T103-L400-Z6fluct-short.abun  ou5-T103-L400-Z6fluct-short.col  ou5-T103-L400-Z6fluct-short.cont  ou5-T103-L400-Z6fluct-short.dr  ou5-T103-L400-Z6fluct-short.ems  ou5-T103-L400-Z6fluct-short.het  ou5-T103-L400-Z6fluct-short.in  ou5-T103-L400-Z6fluct-short.out  ou5-T103-L400-Z6fluct-short.ovr  ou5-T103-L400-Z6fluct-short.rad  ou5-T103-L400-Z6fluct-short.res  ou5-T103-L400-Zfluct-long.abun  (+1250 more)
cspn-tables/MIST-norot-Zhalf/: 0020000M.track.eep  0021000M.track.eep  0023000M.track.eep
data/: image-slit-database.yml  ou5-2025-05-09.bck  pn-ou5-spec-originals-2021-11-05.bck  slits-ha.yml  slits-o3.yaml  slits-o3.yml
data/astrometry-net/: astrometry.cfg
data/first-look/: 215-crop.fits  (+7 more)
diego-remove-cosmicrays/: new-spectra.bck  remove_cosmicRay.py
docs/: h-case-b-n2.csv  h-case-b-n4.csv  pn-ou5-admin.html  pn-ou5-admin.org  pn-ou5-cloudy.org  pn-ou5-physics.html  pn-ou5-physics.org  pn-ou5-pipeline.html  pn-ou5-pipeline.org  shell-summary.tex  test-import.py  test.yml
figs/: ou5-nebular-components.afdesign  ou5-nebular-components.afdesign~lock~  ou5-shell-cylinders.afdesign  ou5-shell-cylinders.afdesign~lock~
mes-longslit/: pyproject.toml
mes-longslit/src/mes_longslit/: __init__.py  regrid.py  slit_utils.py
notebooks/: 00-00-inspect-orig-files.ipynb  00-00-inspect-orig-files.py  01-00-image-astrometry.ipynb  01-00-image-astrometry.py  01-01-median-image.ipynb  01-01-median-image.py  02-01-test-normalize.ipynb  02-01-test-normalize.py  02-02-o3-normalize.ipynb  02-02-o3-normalize.py  03-01-test-vmap.ipynb  03-01-test-vmap.py  04-01-coadd-slits.py  04-02-line-profiles-1d.ipynb  04-02-line-profiles-1d.py  04-03-noise-model.ipynb  04-04-high-resolution.ipynb  04-05-nordic-images.ipynb  05-01-physical-properties.ipynb  05-02-cloudy-models.ipynb  05-03-cloudy-collect.ipynb  06-01-post-agb-evo.ipynb  06-01-post-agb-evo.py  06-02-distance-scale.ipynb  99-01-tere-P-V-final.ipynb  N10036_bcrx_ha_wcs.fits  hr-mist-multi.afdesign~lock~  oiii-4363-strangeness.afdesign~lock~  two_phase.py  utils_chatgpt.py
scripts/: cloudy_line_extract.py  cloudy_observable_table.py  cloudy_tstruct.py
sergey_binary/: system.henney  system.jones
(+318 files in other folders)
